2012-12-15: Sebastian Reitenbach <sebastia@l00-bugdead-prods.de>
	* RandomPlaylistFeed.[h|m] honour the IncludeUnratedSongs
	  default, and optimize algorithm a bit.
	* PlaylistInspector.[h|m] new outlets for the 
	  IncludeUnratedSongs default, and grey out other text
	  when it is disabled
	* Resources/PlaylistInspector.gorm
	  new outlets for some text in order to disable them,
	  and checkbox to include unrated songs
	* SQLiteAdaptor.m little fix

2012-12-12: Sebastian Reitenbach <sebastia@l00-bugdead-prods.de>
	* PlaylistItem.[m|h] make the rating an Integer, not
	  unsigned integer
	* SQLiteAdaptor.[h|m] same as above, and use the quoteString
	  from libSQLite correcly
	* RandomPlaylistFeed, make the feed based on rating work

2012-12-11: Sebastian Reitenbach <sebastia@l00-bugdead-prods.de>
	* nearly any .m file: get rid of GNUstep macros

2012-12-10: Sebastian Reitenbach <sebastia@l00-bugdead-prods.de>
	* Strings.h add new string for Notification for the random
	  playlist feed
	* GNUmakefile, PC.project, add RandomPlaylistFeed.[h|m]
	* Implement a random Playlist Feed
	* PlaylistInspector.[h|m] move out the threading, and
	  put it in the RandomPlaylistFeed class
	* MPDController.[h|m] parameterize getAllTracksWithMetadata:
	* CollectionController.m use the new method
	* AppController.[h|m] initialize the RandomPlaylistFeed

2012-12-02: Sebastian Reitenbach <sebastia@l00-bugdead-prods.de>
	* SongInspector.h
	  add method to shut up gcc from whining it may not be available
	* PlaylistItem.[h|m], LyricsInspector.[h|m]
	  Move the lyrics retriveal from web from the LyricsInspector
	  to the PlaylistItem. There is a better place for it.
	  While there, shut up gcc from whining, save as for the
	  SongInspector

2012-11-25: Sebastian Reitenbach <sebastia@l00-bugdead-prods.de>
	* SQLiteAdaptor.[h|m]
	  restructuring, to also save retrieved lyrics from the 
	  web in the SQLite database
	* PlaylistItem.[h|m]
	  restructuring, and adding methods to retrieve, save